# misc

./: .gitignore  README.md  pyproject.toml  requirements.txt
comvis_server/: dummy_client.py  myparser.py  proposal_2.txt  server.py  solution_color.py
